--- a/frontend/static/style.css
+++ b/frontend/static/style.css
@@ -1,20 +1,30 @@
+
 body {
-    font-family: Arial, sans-serif;
-    margin: 0;
-    background-color: #f0f8ff;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    min-height: 100vh;
-    flex-direction: column;
-    padding: 1em;
-  }
-  
-  .container {
-    width: 100%;
-    max-width: 500px;
-  }
-  
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  min-height: 100vh;
+  margin: 0;
+  padding: 1em;
+  background-color: #f0f8ff;
+  flex-direction: column;
+  background-image: url("/static/images/1.jpg");
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+}
+.container {
+  width: 100%;
+  max-width: 500px;
+  background-color: rgba(255, 255, 255, 0.9); /* translucent white */
+  padding: 1em;
+  border-radius: 10px;
+  box-shadow: 0 0 10px #ccc;
+  box-sizing: border-box;
+}
+
+
   h1 {
     color: #1a73e8;
     text-align: center;
